finished - need to squash small bugs

--- a/scss/components/_images-svg.scss
+++ b/scss/components/_images-svg.scss
@@ -49,8 +49,16 @@ img {
 
   //MEDIA QUERIES
   @include mix.mqDesk('tablet-portrait') {
-    width: f.em(175px);
-    transform: scale(2.4, 3) translate(-6px, 46px);
+    width: f.em(200px);
+    transform: scale(2, 2.2) translate(-13px, 39px);
+    opacity: 0.5;
+  }
+}
+
+@include mix.mqDesk('tablet-portrait') {
+  .square-aside .aside-bg {
+    width: f.em(200px);
+    transform: scale(1.9, 1.8) translate(-13px, 32px);
     opacity: 0.5;
   }
 }
@@ -65,8 +73,8 @@ img {
   transform: translate(15px, -160px);
 
   @include mix.mqDesk('tablet-portrait') {
-    width: f.em(50px);
-    transform: translate(44px, -178px);
+    width: f.em(40px);
+    transform: translate(52px, -174px);
   }
   @include mix.mqDesk('tablet-landscape') {
     margin: f.em(10px) auto;
@@ -75,36 +83,54 @@ img {
 }
 
 .browser,
-.git {
+.git,
+.square-aside .browser,
+.square-aside .git {
   margin-top: f.em(15px);
   transform: translate(10px, -159px);
 
   @include mix.mqDesk('tablet-portrait') {
-    width: f.em(70px);
-    transform: translate(34px, -149px);
+    width: f.em(60px);
+    transform: translate(42px, -149px);
   }
   @include mix.mqDesk('tablet-landscape') {
     margin: 0;
-    transform: translateY(25px);
+    transform: translateY(1px);
+  }
+}
+
+.square-aside .browser,
+.square-aside .git {
+  margin-top: f.em(15px);
+  transform: translate(10px, -159px);
+
+  @include mix.mqDesk('tablet-portrait') {
+    width: f.em(50px);
+    transform: translate(48px, -164px);
+  }
+  @include mix.mqDesk('tablet-landscape') {
+    // margin: 0;
+    // transform: translateY(30px);
   }
 }
 
 .git {
   margin-top: f.em(10px);
   @include mix.mqDesk('tablet-portrait') {
-    margin-top: f.em(40px);
+    // margin-top: f.em(40px);
   }
 
   @include mix.mqDesk('tablet-landscape') {
-    margin: 0;
-    transform: translateY(16px);
+    margin-top: 0;
+    margin-bottom: f.em(8px);
+    // transform: translateY(16px);
   }
 }
 
 @include mix.mqDesk('tablet-landscape') {
   .git-browser-desk.p-8 .git,
   .git-browser-desk.p-8 .browser {
-    transform: translateY(-4px);
+    // transform: translateY(-4px);
   }
 }
 
@@ -116,13 +142,23 @@ img {
   width: f.em(35px);
   margin: 0 f.em(5px);
   @include mix.mqDesk('tablet-portrait') {
-    width: f.em(65px);
-    margin-bottom: f.em(8px);
+    width: f.em(80px);
+    margin-top: f.em(8px);
   }
 
   @include mix.mqDesk('xx-lg-desktop-width') {
-    width: f.em(85px);
-    margin-bottom: f.em(10px);
+    // width: f.em(85px);
+    // margin-bottom: f.em(10px);
+  }
+}
+
+@include mix.mqDesk('tablet-portrait') {
+  .proj-3 .htm-made,
+  .proj-3 .css-made,
+  .proj-4 .html-made,
+  .proj-4 .sass-made {
+    width: f.em(140px);
+    // margin: f.em(15px) f.em(-2px);
   }
 }
 
@@ -133,7 +169,7 @@ img {
   margin-bottom: f.em(10px);
   @include mix.mqDesk('tablet-portrait') {
     width: f.em(65px);
-    margin-bottom: f.em(2px);
+    margin-top: f.em(2px);
   }
 }
 
@@ -142,7 +178,7 @@ img {
 }
 
 .logo-way .logo-img img {
-  margin-top: f.em(2px);
+  margin-bottom: f.em(12px);
 }
 
 /*** about me **/
